# vim-herdr-navigator

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  install.sh  release-plz.toml  renovate.json
.github/workflows/: ci.yml  release-plz.yml
autoload/: vim_herdr_navigator.vim
doc/: herdr-vim-navigator.txt  vim-herdr-navigator.txt
helper/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
helper/.github/workflows/: ci.yml
helper/herdr_vim_navigator/: __init__.py  __main__.py  cli.py
helper/src/: config.rs  detect.rs  doctor.rs  herdr.rs  main.rs  marker.rs
helper/tests/: test_navigator.py
lua/herdr-vim-navigator/: health.lua  init.lua
lua/vim-herdr-navigator/: health.lua  init.lua
plugin/: herdr-vim-navigator.lua  vim-herdr-navigator.lua  vim-herdr-navigator.vim
tests/: run-vim.sh  run.sh  smoke.lua  vim-smoke.vim
