[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herdr-vim-navigator"
dynamic = ["version"]
description = "Seamless Herdr + Vim/Neovim pane navigation — the Herdr side of a vim-tmux-navigator-style setup"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bassim Shahidy" }]
keywords = ["herdr", "vim", "neovim", "tmux", "navigation", "pane", "terminal", "multiplexer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/AVGVSTVS96/herdr-vim-navigator"
Repository = "https://github.com/AVGVSTVS96/herdr-vim-navigator"
"Neovim plugin" = "https://github.com/AVGVSTVS96/herdr-vim-navigator.nvim"
Issues = "https://github.com/AVGVSTVS96/herdr-vim-navigator/issues"

[project.scripts]
herdr-vim-navigator = "herdr_vim_navigator.cli:main"

[tool.hatch.version]
path = "herdr_vim_navigator/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["herdr_vim_navigator"]

[tool.hatch.build.targets.sdist]
include = [
    "herdr_vim_navigator",
    "bin",
    "tests",
    "README.md",
    "LICENSE",
]
